fix horizontal line overlapping

--- a/src/components/Forms/forms.css
+++ b/src/components/Forms/forms.css
@@ -3,8 +3,13 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto auto;
     gap: 20px;
+    grid-row-gap: 1px;
   }
   
+  .form-container > div:nth-child(n+3) {
+    margin-bottom: 20px;
+  }
+
   .form-label {
     color: black;
     font-weight: bold;
